--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
+<link type="text/css" href="/styles.css" media="all" rel="stylesheet"> 
 <h1>Hello World!!!!!!!</h1>
 <h2><a href="/HelloWorldSite/pages/first.html">Welcome!</a></h2>
