--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<link type="text/css" href="/HelloWorldSite/styles.css" media="all" rel="stylesheet"> 
+<!-- This is a comment. It will not show up on your website. -->
+
+<!-- This is how you include your styles from your styles.css file. Note the path in the href starts with your website name: "/HelloWorldSite" -->
+<link type="text/css" href="/HelloWorldSite/styles.css" media="all" rel="stylesheet">
+
 <h1>Hello World!</h1>
-<h2><a href="/HelloWorldSite/pages/first.html">Welcome!</a></h2>
+<h2>
+  <!-- This is a link. The href is a relative path to another file in your website. For mine, it's in "pages/first.html" -->
+  <a href="/HelloWorldSite/pages/first.html">Welcome!</a>
+</h2>
