--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 <link type="text/css" href="/HelloWorldSite/styles.css" media="all" rel="stylesheet">
 
 <h1>Hello World!</h1>
-<h2>
-  <!-- This is a link. The href is a relative path to another file in your website. For mine, it's in "pages/first.html" -->
-  <a href="/HelloWorldSite/pages/first.html">Welcome!</a>
-</h2>
+
+<h2>Here are some examples:</h2>
+
+<!-- An unordered list. Each list item is a "li" -->
+<ul>
+
+  <li>
+    <!-- This is a link. The href is a relative path to another file in your website. For mine, it's in "pages/first.html" -->
+    <a href="/HelloWorldSite/pages/first.html">Link to other Page Example</a>
+  <li>
+    
+  <li>
+    <!-- This is a link. The href is a relative path to another file in your website. For mine, it's in "pages/first.html" -->
+    <a href="/HelloWorldSite/pages/js-example-1/js-example-1.html">Javascript Example</a>
+  <li>
+  
+</ul>
