--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 
 <h2>Here are some examples:</h2>
 
-<!-- An unordered list. Each list item is a "li" -->
+<!-- An unordered list. Each list item (li) is a bulletpoint. -->
 <ul>
 
   <li>
     <!-- This is a link. The href is a relative path to another file in your website. For mine, it's in "pages/first.html" -->
     <a href="/HelloWorldSite/pages/first.html">Link to other Page Example</a>
-  <li>
+  </li>
     
   <li>
     <!-- This is a link. The href is a relative path to another file in your website. For mine, it's in "pages/first.html" -->
     <a href="/HelloWorldSite/pages/js-example-1/js-example-1.html">Javascript Example</a>
-  <li>
+  </li>
   
 </ul>
