--- a/index.html
+++ b/index.html
@@ -20,4 +20,8 @@
     <a href="/HelloWorldSite/pages/js-example-1/js-example-1.html">Javascript Example</a>
   </li>
   
+  <li>
+    <a href="/HelloWorldSite/other.html">Here is another link to a page</a>
+  </li>
+  
 </ul>
