--- a/index.html
+++ b/index.html
@@ -24,4 +24,8 @@
     <a href="/HelloWorldSite/other.html">Here is another link to a page</a>
   </li>
   
+  <li>
+    <a href="/HelloWorldSite/pages/image-example/index.html">This shows how to display an image and how to center it horizontally.</a>
+  </li>
+  
 </ul>
