--- a/pages/image-example/index.html
+++ b/pages/image-example/index.html
@@ -6,7 +6,7 @@
 
 <!-- A div is an html element that takes up as much width as it can. -->
 <div>
-  /* This header will be centered too, because of our css rule, which centers text in h3s inside divs. */
+  <!-- This header will be centered too, because of our css rule, which centers text in h3s inside divs. -->
   <h3>Image 2: Centered</h3>
   
   <!-- This image will be 100 pixels in width, and will be centered, because of the css file styling.  -->
