--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!-- This is a comment. It will not show up on your website. -->
 
-<!-- This is how you include your styles from your styles.css file. Note the path in the href starts with your website name: "/HelloWorldSite" -->
-<!-- <link type="text/css" href="/HelloWorldSite/styles.css" media="all" rel="stylesheet"> -->
+<!-- This is how you include your styles from your styles.css file. -->
 <link type="text/css" href="styles.css" media="all" rel="stylesheet">
 
 <h1>Hello World!</h1>
