--- a/pages/image-example/index.html
+++ b/pages/image-example/index.html
@@ -7,7 +7,8 @@
 <hr/>
 
 <!-- A div is an html element that takes up as much width as it can. -->
-<div>
+<!-- "class" allows us to apply CSS to a specific type of element. -->
+<div class="center-img">
   <!-- This header will be centered too, because of our css rule, which centers text in h3s inside divs. -->
   <h3>Image 2: Centered</h3>
   
