--- a/pages/image-example/index.html
+++ b/pages/image-example/index.html
@@ -8,7 +8,7 @@
 
 <!-- A div is an html element that takes up as much width as it can. -->
 <!-- "class" allows us to apply CSS to a specific type of element. -->
-<div class="center-img">
+<div class="centered">
   <!-- This header will be centered too, because of our css rule, which centers text in h3s inside divs. -->
   <h3>Image 2: Centered</h3>
   
